assets/scss/custom/_grid.scss
.container {
  @media (min-width: $screen-xl-min) {
    width: $container-xl;
  }

  @media (min-width: $screen-xxl-min) {
    width: $container-xxl;
  }
}

@include make-grid-columns;

@media (min-width: $screen-xl-min) {
  @include make-grid(xl);
}

@media (min-width: $screen-xxl-min) {
  @include make-grid(xxl);
}

.container,
.container-fluid {
  .row > [class*="col-"]::before,
  .row > [class*="col-"]::after {
    content: ' ';
    display: block;
  }
}

.container-drain {
  & > .row:not(:first-child) {
    padding-top: ceil($grid-gutter-height / 2);
  }

  & > .row:not(:last-child) {
    padding-bottom: floor($grid-gutter-height / 2);
  }
}

.container-bordered-horizontal,
.container-bordered {
  > .row:not(:last-child)::after {
    border-bottom: 1px solid $grid-border;
    position: relative;
    width: calc(100% - #{$grid-gutter-width});
    left: $grid-gutter-width / 2;
    bottom: floor($grid-gutter-width / 2) * -1;
  }
}
.container-bordered,
.container-bordered-vertical {
  > .row > [class*="col-"]:not(:last-child)::before {
    border-right: 1px solid $grid-border;
    position: absolute;
    height: 100%;
    right: 0;
  }
}

.row.flexible {
  display: flex;
  flex-wrap: wrap;

  & > [class*='col-'].flexible {
    display: flex;
    flex-direction: column;
  }
}


.nogap > [class*="col-"] {
  padding-left: 7.5px;
  padding-right: 7.5px
}
.nogap > [class*="col-"]:first-child {
  padding-left: 15px;
}
.nogap > [class*="col-"]:last-child {
  padding-right: 15px;
}

#accordiongroup-27-4585-panel .panel-body {
    padding-right: 15px !important;
}

.sidebar{
  padding-right: 20px;
  width: 23%;
}

